# chronos

./: Cargo.toml  README.md
docs/superpowers/plans/: 2026-03-30-chronos.md
docs/superpowers/specs/: 2026-03-30-chronos-design.md
src/: cli.rs  job.rs  main.rs  output.rs  sidecar.rs
src/commands/: add.rs  common.rs  enable_disable.rs  list.rs  mod.rs  remove.rs  run_once.rs  search.rs
src/schedule/: cron_gen.rs  humanize.rs  mod.rs  parser.rs
src/system/: at.rs  crontab.rs  mod.rs
tests/: cli_test.rs  list_test.rs  search_test.rs
