[package]
name = "chronos"
version = "0.1.0"
edition = "2024"
description = "CLI for managing cron jobs and one-off scheduled tasks"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
chrono-english = "0.1"
cron-descriptor = "0.1"
comfy-table = "7"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo-matcher = "0.3"
dirs = "6"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
